fixed all volunteer spacing

--- a/Admin/public/css/master.css
+++ b/Admin/public/css/master.css
@@ -339,12 +339,9 @@ text-align: center;
   vertical-align: text-top;
 }
 
-/*.info-view table input{
-  padding: 0;
-  border: none;
+.edit-table input{
   width: 100%;
-  box-sizing : border-box;
-}*/
+}
 
 .info-view {
   border-bottom: 2px solid #ccc;
@@ -449,6 +446,10 @@ table.allVollunteer_table {
   padding: 0 12px;
 }
 
+.allVolunteer_fourth_td {
+  width: 13rem;
+}
+
 .table_entries {
   /*border-top: 2px solid #ddd;*/
   font-weight: bold;
@@ -479,7 +480,8 @@ table.allVollunteer_table {
 
 .allVolunteers-selector {
   background-color: #eeeeee;
-  max-width: 18rem;
+  /*max-width: 19rem;*/
+  min-width: 17rem;
   padding-right: 0;
   margin-right: -4rem;
 }
